Complete migration to JDK 11.